--- a/public/index.html
+++ b/public/index.html
@@ -978,5 +978,101 @@
         </ul>
       </nav>
     </div>
+    <!-- footer -->
+    <footer class="bg-white shadow-xl mt-10 mb-24 md:mb-0">
+      <div class="container max-w-screen-2xl mx-auto px-4 py-8">
+        <h4
+          class="font-extrabold text-xl md:text-2xl flex items-center mb-5 md:mb-0"
+        >
+          <span class="text-orange-500">دیجی</span>
+          <span class="text-slate-800">تایز</span>
+          <div class="mr-1 w-8 h-[2px] bg-orange-500 rounded-md"></div>
+        </h4>
+        <div
+          class="flex flex-col md:flex-row md:items-center md:justify-between gap-y-5 md:gap-y-0"
+        >
+          <div>
+            <div class="md:max-w-96 md:text-lg lg:max-w-xl">
+              <p class="text-slate-800 font-light">
+                دیجی‌ تایز عرضه کننده جدیدترین محصولات الکترونیک نظیر لپ تاپ،
+                گوشی هوشمند و ساعت هوشمند می‌باشد.
+              </p>
+              <p class="text-slate-800 font-light">
+                دیجی تایز افتخار این را داشته که به
+                <span class="text-orange-500 font-normal">۱۲۲,۲۳۲</span> نفر تا
+                به اکنون خدمت رسانی داشته باشد.
+              </p>
+              <p class="text-slate-800 font-light">
+                دیجی تایز با ۲۵ سال سابقه درخشان، ارائه‌دهنده برترین گوشی‌ها،
+                لپ‌تاپ‌ها و ساعت‌های هوشمند. همواره همراه شما در مسیر نوآوری و
+                تکنولوژی، با تعهد به کیفیت و رضایت مشتری برای تجربه‌ای مطمئن و
+                لذت‌بخش.
+              </p>
+            </div>
+          </div>
+          <div>
+            <p class="text-slate-800 text-lg mb-3 md:mb-7 md:font-bold">
+              محصولات
+            </p>
+            <ul class="text-slate-700">
+              <li class="mb-1 md:mb-5">تلفن همراه</li>
+              <li class="mb-1 md:mb-5">لپتاپ</li>
+              <li class="mb-1 md:mb-5">ساعت هوشمند</li>
+            </ul>
+          </div>
+          <div
+            class="flex flex-col sm:flex-row md:flex-col items-start md:items-end justify-between gap-y-2 sm:gap-y-0"
+          >
+            <div
+              class="flex flex-col md:order-1 gap-y-2 items-center text-slate-800"
+            >
+              <div class="flex items-center md:justify-end gap-x-1 w-full">
+                <p>۰۲۱-۱۲۳۴۵۶</p>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="#f97316"
+                  class="size-5"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </div>
+              <div class="flex items-center md:justify-end gap-x-1 w-full">
+                <a href="#">info@digitize.com</a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="#f97316"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="w-44 sm:w-52 md:w-60 md:mb-5">
+              <img
+                class="w-full h-auto"
+                src="../assets/images/map.svg"
+                alt="map"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="pb-2 px-4 text-sm font-extralight text-center text-slate-800">
+        تمامی حقوق مادی و معنوی این سایت متعلق به
+        <span class="text-orange-500 font-light">دیجی تایز</span> می‌باشد.
+      </p>
+    </footer>
   </body>
 </html>
